--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,9 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
@@ -40,7 +43,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: example/example_be:latest # 본인의 도커에미지를 넣어준다 
+          tags: scdv/test:bus_reserve # 본인의 도커에미지를 넣어준다 
 
       - name: Image digest
         run: echo $
