--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,7 +9,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -34,8 +33,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: $
-          password: $
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push
         id: docker_build
@@ -43,10 +42,10 @@ jobs:
         with:
           context: .
           push: true
-          tags: scdv/test:bus_reserve # 본인의 도커에미지를 넣어준다 
+          tags: example/example_be:latest
 
       - name: Image digest
-        run: echo $
+        run: echo ${{ steps.docker_build.outputs.digest }}
 
   deploy:
     needs: build
@@ -56,8 +55,9 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: scdv
-          password: znmh1233!
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Docker run
         run: |
           docker ps -q --filter "name=example_be" | grep -q . && docker stop example_be && docker rm -fv example_be
