--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow that is manually triggered
-
 name: Manual workflow
 
 on:
@@ -23,9 +21,6 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
-          
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -33,8 +28,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: $
-          password: $
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push
         id: docker_build
@@ -55,8 +50,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: $
-          password: $
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Docker run
         run: |
           docker ps -q --filter "name=example_be" | grep -q . && docker stop example_be && docker rm -fv example_be
